# SDK_AGENT

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
apps/web/: .env.example  middleware.ts  package-lock.json  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/supabase/: notes.sql  saas.sql
src/sdk_agent/: __init__.py  cli.py  config.py  context.py  guardrails.py  logging_config.py  main.py  mcp.py  models.py  team.py
src/sdk_agent/api/: __init__.py  graph_views.py  run_views.py  schemas.py
src/sdk_agent/cli/: run_portfolio.py
src/sdk_agent/core/: __init__.py  approvals.py  artifacts.py  audit.py  base_agent.py  evaluations.py  git_workflow.py  persistence.py  policy_engine.py  sensitivity.py  ticket_connectors.py  transitions.py  workflow.py  workflow_engine.py  workflow_runtime.py  workflow_state.py
src/sdk_agent/graph/: __init__.py  builder.py  execution_view.py  layout.py  models.py  serializer.py
src/sdk_agent/plugins/: __init__.py  (+7 more)
tests/: test_audit_logging.py  test_cli.py  test_deployment_gates.py  test_evaluations.py  test_execution_view.py  test_git_tools.py  test_git_workflow.py  test_graph_models.py  test_graph_serializer.py  test_guardrails.py  test_import.py  test_persistence.py  test_plugin_policy.py  test_plugins.py  test_policy_engine.py  test_retry_loop.py  test_review_parsing.py  test_sensitive_paths.py  test_team_config_plugins.py  test_ticket_connectors.py  test_ticket_connectors_http.py  test_tools.py  test_trust_profiles.py  test_web_api_security.py  test_web_tracker.py  test_workflow_engine_feature_flow.py  test_workflow_engine_retry_loop.py  test_workflow_resume.py  test_workflow_state.py  test_workflow_tracking.py
(+40 files in other folders)
