[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdk-agent"
version = "0.1.0"
description = "Reusable multi-agent SDK for software workflows"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Maxence Legendre" }
]
dependencies = [
  "openai-agents"
]

[project.optional-dependencies]
web = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
