[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdk-agent"
version = "0.1.0"
description = "Reusable multi-agent software delivery platform with OpenAI Agents SDK and Codex MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai-agents>=0.12.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
sdk-agent = "sdk_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
